Introduce `TaskPlatformThreadAdapter` and update `TaskVirtualThreadAdapter` to use specialized components.